Se agrega mision, vision y valores, tambien se cambia color de fondo de la cabecera

--- a/src/nosotros.html
+++ b/src/nosotros.html
@@ -12,7 +12,7 @@
 <body>
     <!-----------------------------Seccion Menu de la Pagina------------>
     <header class="container">
-            <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+            <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
                 <div class="container">
                     <h1 class="navbar-brand">IBPR</h1>
                     <button class="navbar-toggler" data-toggle="collapse" data-target="#menu">
@@ -24,7 +24,7 @@
                            <li class="nav-item"><a href="#" class="nav-link">Nosotros</a></li>
                            <li class="nav-item dropdown">
                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Servicios</a>
-                               <ul class="dropdown-menu submenu bg-light">
+                               <ul class="dropdown-menu submenu bg-primary">
                                    <li class="dropdown-item" ><a class="nav-link" href="actividades.html ">Actividades</a></li>
                                    <li class="dropdown-item" ><a class="nav-link" href="consejeria.html ">Consejeria</a></li>
                                    <li class="dropdown-item" ><a class="nav-link" href="intersecion.html ">Motivos de Oracion</a></li>
@@ -38,6 +38,54 @@
             </nav>
         </header>
     
+
+        <div class="container contenidos">
+            <section class="row">
+                <aside class="col-md-12 col-lg-12">
+                    <h3 class="text-center">Quiénes Somos</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo molestias iure, accusamus et, eaque sequi dolorem odit voluptatum perferendis molestiae officia, eos deserunt obcaecati asperiores nostrum! Cum veritatis animi iste?
+                    </p>
+                </aside>
+            </section> <hr>
+
+            <section class="row">
+                <aside class="col-md-12 col-lg-12">
+                    <h3 class="text-center">Misión</h3>
+                    <p>
+                        Hacer conocer a las personas acerca de las enseñanzas, doctrinas y fundamentos
+                        que la Biblia enseña, y que lleguen al pleno conocimiento de la persona de 
+                        Jesucristo, obedeciendo a ello con un testimonio real de lo que predicamos
+                    </p>
+                </aside>
+            </section><hr>
+
+            <section class="row">
+                <aside class="col-md-12 col-lg-12">
+                    <h3 class="text-center">Visión</h3>
+                    <p>
+                        Llegar a todas las personas con la palabra de Dios, así como también esas 
+                        personas puedan tener una transformacion y vida nueva por medio del Espíritu Santo
+                        para que con ello puedan testificar del amor de Dios al mundo.
+                    </p>
+                </aside>
+            </section><hr>
+
+            <section class="row">
+                <aside class="col-md-12 col-lg-12">
+                    <h3 class="text-center">Valores</h3>
+                    <p>
+                        <ul class="text-center h5 py-3">
+                            <li class="py-2">Honestidad</li>
+                            <li class="py-2">Sinceridad</li>
+                            <li class="py-2">Transparencia</li>
+                            <li class="py-2">Amor</li>
+                            <li class="py-2">Compañerismo</li>
+                        </ul>
+                    </p>
+                </aside>
+            </section><hr>
+        </div>
    <!-------------------------------Pie de Pagina------------------>
    <div class="d-block fixed-bottom mt-5">
         <footer class="bg-secondary text-center text-dark ">
