Se agrega fondo de la barra de menu color primary

--- a/src/nosotros.html
+++ b/src/nosotros.html
@@ -25,9 +25,9 @@
                            <li class="nav-item dropdown">
                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Servicios</a>
                                <ul class="dropdown-menu submenu bg-primary">
-                                   <li class="dropdown-item" ><a class="nav-link" href="actividades.html ">Actividades</a></li>
-                                   <li class="dropdown-item" ><a class="nav-link" href="consejeria.html ">Consejeria</a></li>
-                                   <li class="dropdown-item" ><a class="nav-link" href="intersecion.html ">Motivos de Oracion</a></li>
+                                   <li class="dropdown-item bg-primary" ><a class="nav-link" href="actividades.html ">Actividades</a></li>
+                                   <li class="dropdown-item bg-primary" ><a class="nav-link" href="consejeria.html ">Consejeria</a></li>
+                                   <li class="dropdown-item bg-primary" ><a class="nav-link" href="intersecion.html ">Motivos de Oracion</a></li>
                                </ul>
                             </li>
                            <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
