--- a/src/blog.html
+++ b/src/blog.html
@@ -12,7 +12,7 @@
 <body>
     <!-----------------------------Seccion Menu de la Pagina------------>
     <header class="container">
-        <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+        <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
             <div class="container">
                 <h1 class="navbar-brand">IBPR</h1>
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#menu">
@@ -24,10 +24,10 @@
                         <li class="nav-item"><a href="nosotros.html" class="nav-link">Nosotros</a></li>
                         <li class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Servicios</a>
-                            <ul class="dropdown-menu submenu bg-light">
-                                <li class="dropdown-item"><a href="actividades.html" class="nav-link">Actividades</a></li>
-                                <li class="dropdown-item"><a href="consejeria.html" class="nav-link">Consejería</a></li>
-                                <li class="dropdown-item"><a href="intersecion.html" class="nav-link">Motivos de Oración</a></li>
+                            <ul class="dropdown-menu submenu bg-primary">
+                                <li class="dropdown-item bg-primary"><a href="actividades.html" class="nav-link">Actividades</a></li>
+                                <li class="dropdown-item bg-primary"><a href="consejeria.html" class="nav-link">Consejería</a></li>
+                                <li class="dropdown-item bg-primary"><a href="intersecion.html" class="nav-link">Motivos de Oración</a></li>
                             </ul>
                         </li>
                         <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
