Se agrega caja de texto para los motivos de oracion

--- a/src/intersecion.html
+++ b/src/intersecion.html
@@ -37,6 +37,23 @@
             </div>
         </nav>
     </header>
+
+
+    <div class="contenidos">
+        <h3 class="text-center font-weight-bold m-2">Dejanos tus pedidos de oración</h3>  
+        <section class="container">
+                <form action="/action_page.php">
+                    <div class="form-group">
+                        <label for="comment">Quisiera que oren por:</label>
+                        <textarea class="form-control" rows="20" id="comment" name="text"></textarea>
+                        <button type="submit" class="btn btn-outline-primary mt-2 ml-auto">Enviar</button>
+                    </div>
+                    <!--div class="form-group">
+
+                    </div-->
+                </form>
+        </section>
+    </div>
    <!-------------------------------Pie de Pagina------------------>
    <div class="d-block fixed-bottom mt-5">
         <footer class="bg-secondary text-center text-dark ">
