--- a/prueba.html
+++ b/prueba.html
@@ -1,135 +1,49 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
-	<script  src="https://code.jquery.com/jquery-3.3.1.js"></script>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-	<style>
-		.sec1 {
-			height: 40vh;
-			width: 50%;
-			
-		}
-
-		.sec2 {
-			height: 40vh;
-			width: 50%;
-
-		}
-
-		.sec3 {
-			height: 40vh;
-			width: 50%;
-		
-		}
-
-		.sec4 {
-			height: 40vh;
-			width: 50%;
-		
-		}
-
-		.sec5 {
-			height: 40vh;
-			width: 50%;
-	
-		}
-
-		.sec6 {
-			height: 40vh;
-			width: 50%;
-			
-		}
-	</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <style>
+      .parrafo {
+        color: blue;
+        height: 40vh;
+        width: 100%;
+        text-indent: 5px;
+        word-wrap: break-word;
+      }
+  </style>
+  
+  <title>Document</title>
+  
 </head>
 <body>
-	<div class="container">
-		<div class="row">
-			<section class="col-md-12 col-lg-6 sec1 ">
-				<p class="p-5 m-5">
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex laudantium possimus a quasi necessitatibus voluptas magni beatae nihil, perferendis maiores! Autem voluptatum impedit iste in officiis fugiat omnis consectetur suscipit.
-				</p>
-			</section>
-			<br><br>
-			<section class="col-md-12 col-lg-6 sec2 ">
-				<p class="p-5 m-5">
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex laudantium possimus a quasi necessitatibus voluptas magni beatae nihil, perferendis maiores! Autem voluptatum impedit iste in officiis fugiat omnis consectetur suscipit.
-				</p>
-			</section>
-		</div>
-
-		<div class="row">
-			<section class="col-md-12 col-lg-6 sec3 ">
-				<p class="p-5 m-5">
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex laudantium possimus a quasi necessitatibus voluptas magni beatae nihil, perferendis maiores! Autem voluptatum impedit iste in officiis fugiat omnis consectetur suscipit.
-				</p>
-			</section>
-			<section class="col-md-12 col-lg-6 sec4 ">
-				<p class="p-5 m-5">
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex laudantium possimus a quasi necessitatibus voluptas magni beatae nihil, perferendis maiores! Autem voluptatum impedit iste in officiis fugiat omnis consectetur suscipit.
-				</p>
-			</section>
-		</div>
-
-		<div class="row">
-			<section class="col-md-12 col-lg-6 sec5 ">
-				<p class="p-5 m-5">
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex laudantium possimus a quasi necessitatibus voluptas magni beatae nihil, perferendis maiores! Autem voluptatum impedit iste in officiis fugiat omnis consectetur suscipit.
-				</p>
-			</section>
-			<section class="col-md-12 col-lg-6 sec6 ">
-				<p class="p-5 m-5">
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex laudantium possimus a quasi necessitatibus voluptas magni beatae nihil, perferendis maiores! Autem voluptatum impedit iste in officiis fugiat omnis consectetur suscipit.
-				</p>
-			</section>
-		</div>
-
-	</div>
-	
-
-
-
-
-
-
-
-
-<div class="container">
-	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-		<ol class="carousel-indicators">
-			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-		</ol>
-		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img class="d-block w-100" src="imagenes/img_1.JPG" alt="First slide">
-			</div>
-			<div class="carousel-item">
-				<img class="d-block w-100" src="imagenes/img_2.JPG" alt="Second slide">
-			</div>
-			<div class="carousel-item">
-				<img class="d-block w-100" src="imagenes/img_3.JPG" alt="Third slide">
-			</div>
-		</div>
-		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a>
-	</div>
-</div>
-
+  <div class="container">
+    <h1 class="text-center"> Este es el titulo</h1>
+    <div class="row">
+      <div class="col-md-12 col-lg-12 text-center">
+          <p>
+            <!--a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+              Link with href
+            </a-->
+            <button class="btn btn-primary dropdown-toggle px-5" data-toggle="collapse" data-target="#collapseExample" >
+              Este es un simple texto que deberia de deslegar algo
+            </button>
+          </p>
+          <div class="collapse" id="collapseExample">
+            <div class="card card-body border-0">
+              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+            </div>
+          </div>    
+      </div>
+    </div>
+  </div>
   
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
