--- a/prueba.html
+++ b/prueba.html
@@ -5,73 +5,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <style>
-      .parrafo {
-        color: blue;
-        height: 40vh;
-        width: 100%;
-        text-indent: 5px;
-        word-wrap: break-word;
-      }
-  </style>
-  
   <title>Document</title>
   
 </head>
 <body>
-  <div class="container">
-    <h1 class="text-center"> Este es el titulo</h1>
-    <div class="row">
-    	<div class="col-md-12 col-lg-12 text-center">
-		
+	<div class="container">
+		<h1 class="text-center"> Este es el titulo</h1>
+		<div class="row">
+			<div class="col-md-12 col-lg-12 text-center">
+
 			<div id="accordion">
-				<div class="card">
-					<div class="card-header" id="headingOne">
-						<h5 class="mb-0">
-							<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+				<!--Aqui empieza el primer acordeon-->
+				<div class="card">`
+					<div class="card-header">
+						<h5>
+							<button class="btn btn-link" data-toggle="collapse" data-target="#uno" >
 								Collapsible Group Item #1
 							</button>
 						</h5>
 					</div>
 
-					<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-						<div class="card-body">
-							Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-						</div>
+					<!--usamos la clase collapse show si queremos que se despliegue al inicio-->
+					<div id="uno" class="collapse" data-parent="#accordion">
+					<div class="card-body">
+					Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.aaaaaabr <br>xsxsxsxsmxksnjkbsakjvhask
+					</div>
 					</div>
 				</div>
+
 				<div class="card">
-					<div class="card-header" id="headingTwo">
-						<h5 class="mb-0">
-							<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+					<div class="card-header">
+						<h5>
+							<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#dos">
 								Collapsible Group Item #2
 							</button>
 						</h5>
 					</div>
-					<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+					<div id="dos" class="collapse" data-parent="#accordion">
 						<div class="card-body">
 							Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
 						</div>
 					</div>
 				</div>
 				<div class="card">
-					<div class="card-header" id="headingThree">
-						<h5 class="mb-0">
-							<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+					<div class="card-header">
+						<h5>
+							<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" >
 								Collapsible Group Item #3
 							</button>
 						</h5>
 					</div>
-					<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+					<div id="collapseThree" class="collapse" data-parent="#accordion">
 						<div class="card-body">
 							Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
 						</div>
 					</div>
 				</div>
-			</div> 
-      	</div>
-    </div>
-  </div>
+				</div> 
+			</div>
+		</div>
+	</div>
   
 
 
