Se quita texto de titulo de consejeria

--- a/src/consejeria.html
+++ b/src/consejeria.html
@@ -429,7 +429,7 @@
                         <div class="card-header w-100 text-center">
                             <h3>
                                 <button class="btn btn-link dropdown-toggle text-center" data-toggle="collapse" data-target="#once">
-                                    ¿Es usted inseguro?¿Le falta estima propia?
+                                    ¿Es usted inseguro?
                                 </button>
                             </h3>
                         </div>
