Se agrega versiculo en la cabecera

--- a/src/intersecion.html
+++ b/src/intersecion.html
@@ -39,18 +39,19 @@
     </header>
 
 
-    <div class="contenidos">
-        <h3 class="text-center font-weight-bold m-2">Dejanos tus pedidos de oración</h3>  
+    <div class="contenidos ultimo">
+        <h3 class="text-center font-weight-bold m-3 display-6"><ins>Dejanos tus pedidos de oración</ins></h3>  
         <section class="container">
+            <p class="font-italic mx-3">
+                "Y la oración de fe salvará al enfermo, y el Señor lo levantará; y si hubiere cometido pecados, le serán perdonados"
+                <cite class="text-right d-block mr-5">Santiago 5:16</cite>
+            </p>
                 <form action="/action_page.php">
-                    <div class="form-group">
-                        <label for="comment">Quisiera que oren por:</label>
-                        <textarea class="form-control" rows="20" id="comment" name="text"></textarea>
-                        <button type="submit" class="btn btn-outline-primary mt-2 ml-auto">Enviar</button>
-                    </div>
-                    <!--div class="form-group">
-
-                    </div-->
+                <div class="form-group">
+                    <!--label class="h5 my-3">Quisiera que oren por:</label-->
+                    <textarea class="form-control" rows="20" name="text" placeholder="Quisiera que oren por..."></textarea>
+                    <button type="submit" class="btn btn-outline-primary mt-2 ml-auto">Enviar</button>
+                </div>
                 </form>
         </section>
     </div>
