Se subraya el titulo

--- a/src/blog.html
+++ b/src/blog.html
@@ -47,7 +47,7 @@
 
             <aside class="col-md-12 col-lg-12 p-5">
                 <h3 class="display-3 text-center">Editorial</h3>
-                <h4 class="display-5">Una iglesia que crece</h4>
+                <h4 class="display-5"><ins>Una iglesia que crece</ins></h4>
                 <blockquote class="w-75 m-auto">
                     <span>
                        "Porque ya conocéis la gracia de nuestro Señor Jesucristo, que por amor a 
