Se coloca al centro los valores

--- a/src/nosotros.html
+++ b/src/nosotros.html
@@ -75,12 +75,12 @@
                 <aside class="col-md-12 col-lg-12">
                     <h3 class="text-center">Valores</h3>
                     <p>
-                        <ul class="text-center h5 py-3">
-                            <li class="py-2">Honestidad</li>
-                            <li class="py-2">Sinceridad</li>
-                            <li class="py-2">Transparencia</li>
-                            <li class="py-2">Amor</li>
-                            <li class="py-2">Compañerismo</li>
+                        <ul class="text-center mr-5">
+                            <li><p>Honestidad</p></li>
+                            <li><p>Sinceridad</p></li>
+                            <li><p>Transparencia</p></li>
+                            <li><p>Amor</p></li>
+                            <li><p>Compañerismo</p></li>
                         </ul>
                     </p>
                 </aside>
