Se agrega tarjetas de actividades del año

--- a/src/actividades.html
+++ b/src/actividades.html
@@ -37,6 +37,75 @@
             </div>
         </nav>
     </header>
+
+    <!------------------------------Contenidos-------------------->
+    <div class="container cont-act">
+        <div class="row">
+            <div class="col-lg-6 col-md-12 primero">
+                <div class="card m-5" >
+                    <img src="../imagenes/actividades/act_1.jpg" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">Festejo día de la juventud</h4>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas voluptas voluptates enim laboriosam fugiat molestias a voluptate in, possimus, quam debitis nobis non nostrum excepturi maiores doloribus odit ut necessitatibus.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12 segundo">
+                <div class="card m-5" >
+                    <img src="../imagenes/actividades/act_2.jpg"  alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">Capacitacion para misiones</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, vel? Sint maiores, odio aspernatur corporis incidunt voluptatibus labore nam voluptates at quas minima laboriosam libero repudiandae a necessitatibus dolorum exercitationem?</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-6 col-md-12">
+                <div class="card m-5">
+                    <img src="../imagenes/actividades/act_3.jpg" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">Festejo día del pastor</h4>
+                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias inventore, non ducimus minima tempora repudiandae, quos ipsa obcaecati aperiam illum voluptatem! Reiciendis magnam porro cumque, nulla doloribus eaque exercitationem sequi?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12">
+                <div class="card m-5">
+                    <img src="../imagenes/actividades/act_4.jpg" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">Ven a Jesús</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda odit nemo necessitatibus at labore, amet sapiente! Beatae blanditiis, minus eveniet nisi reiciendis iure rem fuga voluptatibus repudiandae nostrum officia velit!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-6 col-md-12">
+                <div class="card m-5">
+                    <img src="../imagenes/actividades/act_5.jpg" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">Navidad con Cristo</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat assumenda distinctio autem omnis esse rerum dolorum possimus quod accusantium obcaecati saepe, vitae earum fugit inventore laudantium eius iure eum!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12">
+                <div class="card m-5">
+                    <img src="../imagenes/actividades/act_6.jpg" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">Cena y despedida del año</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat assumenda distinctio autem omnis esse rerum dolorum possimus quod accusantium obcaecati saepe, vitae earum fugit inventore laudantium eius iure eum!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
    <!-------------------------------Pie de Pagina------------------>
    <div class="d-block fixed-bottom mt-5">
         <footer class="bg-secondary text-center text-dark ">
