--- a/src/nosotros.html
+++ b/src/nosotros.html
@@ -20,7 +20,7 @@
                     </button>
                     <div class="navbar-collapse collapse" id="menu">
                        <ul class="navbar-nav ml-auto">
-                           <li class="nav-item"><a href="../index.php" class="nav-link">Inicio</a></li>
+                           <li class="nav-item"><a href="../index.html" class="nav-link">Inicio</a></li>
                            <li class="nav-item"><a href="#" class="nav-link">Nosotros</a></li>
                            <li class="nav-item dropdown">
                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Servicios</a>
